@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19352: Fix unittest discovery when a module can be reached
+  through several paths (e.g. under Debian/Ubuntu with virtualenv).
+
 - Issue #15207: Fix mimetypes to read from correct part of Windows registry
   Original patch by Dave Chambers
 
